--- a/Final Project/services.html
+++ b/Final Project/services.html
@@ -119,8 +119,8 @@
         </section>
         <nav id="service-nav">
             <ul >
-              <li><a href="Reception.html">Wedding Reception</a></li>
-              <li><a href="Missionary.html">Full-time Temple Missionary</a></li>
+              <li><a href="reception.html">Wedding Reception</a></li>
+              <li><a href="missionary.html">Full-time Temple Missionary</a></li>
             </ul>
           </nav>
         <div class="amenities-list">
