--- a/Final Project/aboutus.html
+++ b/Final Project/aboutus.html
@@ -150,22 +150,22 @@
             <h4>Social Network</h4>
             <ul>
               <li>
-                <img src="images/facebook.webp" /><a href="www.facebook.com"
+                <img src="images/facebook.webp" alt="facebook icon"/><a href="www.facebook.com"
                   >Facebook</a
                 >
               </li>
               <li>
-                <img src="images/instagram.webp" /><a href="www.instagram.com"
+                <img src="images/instagram.webp" alt="instagram icon"/><a href="www.instagram.com"
                   >Instagram</a
                 >
               </li>
               <li>
-                <img src="images/twitter.png" /><a href="www.twitter.com"
+                <img src="images/twitter.png" alt="twitter icon" /><a href="www.twitter.com"
                   >Twitter</a
                 >
               </li>
               <li>
-                <img src="images/youtube.png" /><a href="www.youtube.com"
+                <img src="images/youtube.png"  alt="youtube icon"/><a href="www.youtube.com"
                   >Youtube</a
                 >
               </li>
