--- a/Final Project/aboutus.html
+++ b/Final Project/aboutus.html
@@ -74,92 +74,103 @@
       </nav>
     </header>
     <main>
-      <section id="services">
-        <h1>Best Hotel Amenities for Business Travelers</h1>
-        <section class="amenities">
+      <section class="top-aboutus">
+        <div class="backgrn">
+          <h2>Need help? We're here for you 24/7.</h2>
+          <div class="buttons">
+            <div class="register">
+              <a href="#" class="sign">Sing in o Register</a>
+            </div>
+            <div class="pointer">
+              <svg
+                width="8px"
+                height="12px"
+                viewBox="0 0 8 12"
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g
+                  transform="translate(-739.000000, -406.000000)"
+                  fill="#0F294D"
+                  opacity="70%"
+                >
+                  <g transform="translate(196.000000, 251.000000)">
+                    <g transform="translate(331.000000, 82.000000)">
+                      <g transform="translate(49.000000, 60.000000)">
+                        <polygon
+                          transform="translate(167.000000, 19.000000) scale(1, -1) rotate(270.000000) translate(-167.000000, -19.000000)"
+                          points="167 15 173 23 161 23"
+                        ></polygon>
+                      </g>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+            </div>
+            <div class="buttons-help">
+                <span>Get personalized help</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="aboutus">
+        <div class="bottom">
           <div>
+            <h4>About</h4>
             <ul>
-              <li>
-                Free access to changing rooms and bathroom facilities for temple
-                patrons
-              </li>
-              <li>
-                Playroom and low-cost, short-term babysitting services for the
-                children of patrons
-              </li>
-              <li>
-                Long-term stay accommodations in kitchenette suites for
-                full-time temple missionaries
-              </li>
-              <li>Temple history themed reception and sitting area</li>
-              <li>
-                Wedding reception hall that can be easily customized with a
-                simple catering menu
-              </li>
-              <li>Kitchen access for food preparation and serving</li>
-              <li>
-                Family search center that supports family search and ordinance
-                work
-              </li>
+              <li>About Trip.com</li>
+              <li>News</li>
+              <li>Careers</li>
+              <li>Terms & Conditions</li>
+              <li>Privacy Statement</li>
+              <li>About Trip.com Group</li>
             </ul>
           </div>
           <div>
+            <h4>Other Services</h4>
             <ul>
-              <li>Breakfast</li>
-              <li>Exercise/workout room</li>
-              <li>Indoor pool</li>
-              <li>WiFi high-speed internet access and smart TVs</li>
-              <li>Parking</li>
-              <li>Temple shuttle</li>
+              <li>Investor Relations</li>
+              <li>Trip.com Rewards</li>
+              <li>Affiliate Program</li>
+              <li>List My Hotel</li>
+              <li>All Hotels</li>
+              <li>Become a Tours & Tickets Vendor</li>
+            </ul>
+          </div>
+          <div>
+            <h4>Contact Us</h4>
+            <ul>
+              <li>Customer Support</li>
+              <li>Service Guarantee</li>
+              <li>Website Feedback</li>
+            </ul>
+          </div>
+          <div>
+            <h4>Social Network</h4>
+            <ul>
               <li>
-                Family history consultation and family ordinance card service
+                <img src="images/facebook.webp" alt="facebook icon"/><a href="www.facebook.com"
+                  >Facebook</a
+                >
+              </li>
+              <li>
+                <img src="images/instagram.webp" alt="instagram icon"/><a href="www.instagram.com"
+                  >Instagram</a
+                >
+              </li>
+              <li>
+                <img src="images/twitter.png" alt="twitter icon" /><a href="www.twitter.com"
+                  >Twitter</a
+                >
+              </li>
+              <li>
+                <img src="images/youtube.png"  alt="youtube icon"/><a href="www.youtube.com"
+                  >Youtube</a
+                >
               </li>
             </ul>
           </div>
-        </section>
-        <nav id="service-nav">
-            <ul >
-              <li><a href="reception.html">Wedding Reception</a></li>
-              <li><a href="missionary.html">Full-time Temple Missionary</a></li>
-            </ul>
-          </nav>
-        <div class="amenities-list">
-          <ul class="amenities-list-ul">
-            <li>Parking</li>
-            <li>Free Wifi</li>
-            <li>Room Service</li>
-            <li>24-Hour Guest Reception</li>
-            <li>Complimentary Toiletries</li>
-            <li>Healthy Breakfast</li>
-            <li>Ample Wall Outlets</li>
-            <li>Hair Styling Tools</li>
-            <li>Flexible Checkout</li>
-            <li>Pool</li>
-          </ul>
-          <ul>
-            <li>Mini-fridge</li>
-            <li>Complimentary Electronics Chargers</li>
-            <li>Clothing Iron</li>
-            <li>Business Facilities</li>
-            <li>Transportation Information</li>
-            <li>Free Breakfast</li>
-            <li>Laundry Services</li>
-            <li>Spa & Wellness Amenities</li>
-            <li>Exercise Facilities and Accessories</li>
-            <li>Daily Newspaper</li>
-          </ul>
-          <ul>
-            <li>Entertainment</li>
-            <li>Complimentary Luggage storage</li>
-            <li>Cribs & Cots for Children</li>
-            <li>Custom Offers</li>
-            <li>Curated Experiences</li>
-            <li>Fancy Bathrobes</li>
-            <li>Kid-friendly Rooms and Products</li>
-            <li>Premium Bedding</li>
-            <li>Stain Remover Wipes</li>
-            <li>Pet-friendly Rooms</li>
-          </ul>
         </div>
       </section>
     </main>
