--- a/Final Project/reception.html
+++ b/Final Project/reception.html
@@ -75,92 +75,38 @@
     </header>
     <main>
       <section id="services">
-        <h1>Best Hotel Amenities for Business Travelers</h1>
-        <section class="amenities">
-          <div>
-            <ul>
-              <li>
-                Free access to changing rooms and bathroom facilities for temple
-                patrons
-              </li>
-              <li>
-                Playroom and low-cost, short-term babysitting services for the
-                children of patrons
-              </li>
-              <li>
-                Long-term stay accommodations in kitchenette suites for
-                full-time temple missionaries
-              </li>
-              <li>Temple history themed reception and sitting area</li>
-              <li>
-                Wedding reception hall that can be easily customized with a
-                simple catering menu
-              </li>
-              <li>Kitchen access for food preparation and serving</li>
-              <li>
-                Family search center that supports family search and ordinance
-                work
-              </li>
-            </ul>
-          </div>
-          <div>
-            <ul>
-              <li>Breakfast</li>
-              <li>Exercise/workout room</li>
-              <li>Indoor pool</li>
-              <li>WiFi high-speed internet access and smart TVs</li>
-              <li>Parking</li>
-              <li>Temple shuttle</li>
-              <li>
-                Family history consultation and family ordinance card service
-              </li>
-            </ul>
-          </div>
-        </section>
-        <nav id="service-nav">
-            <ul >
-              <li><a href="reception.html">Wedding Reception</a></li>
-              <li><a href="missionary.html">Full-time Temple Missionary</a></li>
-            </ul>
-          </nav>
-        <div class="amenities-list">
-          <ul class="amenities-list-ul">
-            <li>Parking</li>
-            <li>Free Wifi</li>
-            <li>Room Service</li>
-            <li>24-Hour Guest Reception</li>
-            <li>Complimentary Toiletries</li>
-            <li>Healthy Breakfast</li>
-            <li>Ample Wall Outlets</li>
-            <li>Hair Styling Tools</li>
-            <li>Flexible Checkout</li>
-            <li>Pool</li>
-          </ul>
+        <h1>Everything You Need To Know About Wedding Guest Accommodations</h1>
+
+        <section class="wedding">
           <ul>
-            <li>Mini-fridge</li>
-            <li>Complimentary Electronics Chargers</li>
-            <li>Clothing Iron</li>
-            <li>Business Facilities</li>
-            <li>Transportation Information</li>
-            <li>Free Breakfast</li>
-            <li>Laundry Services</li>
-            <li>Spa & Wellness Amenities</li>
-            <li>Exercise Facilities and Accessories</li>
-            <li>Daily Newspaper</li>
+            <li>Engagement</li>
+            <li>Advice</li>
+            <li>After the Wedding</li>
+            <li>Bachelorette Party</li>
+            <li>Beauty</li>
+            <li>Binge Watch</li>
+            <li>Bridal Book Club</li>
+            <li>Cakes</li>
+            <li>Catering</li>
+            <li>Ceremony</li>
+            <li>Change the Date Templates</li>
+            <li>Cocktails</li>
+            <li>Color</li>
+            <li>Covid-19</li>
+            <li>Delicious</li>
+            <li>Desserts</li>
+            <li>Destination Weddings</li>
           </ul>
-          <ul>
-            <li>Entertainment</li>
-            <li>Complimentary Luggage storage</li>
-            <li>Cribs & Cots for Children</li>
-            <li>Custom Offers</li>
-            <li>Curated Experiences</li>
-            <li>Fancy Bathrobes</li>
-            <li>Kid-friendly Rooms and Products</li>
-            <li>Premium Bedding</li>
-            <li>Stain Remover Wipes</li>
-            <li>Pet-friendly Rooms</li>
-          </ul>
+        <div class="wedding-right-side">
+            <h4>RECENT POST</h4>   
+            <p>How to choose your maid of honor?</p>
+            
+            <p>Tips to planning an unforgettable honeymoon</p>
+            <p>How to find your perfect venue</p>
+            <p>Self-service buffet or plated menu?</p>
+            <p>Top Wedding Flowers 2022</p>
         </div>
+        </section>
       </section>
     </main>
     <footer>
